--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@modules/maps": "file:./modules/maps/",
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/photo-editing": "file:./modules/photo-editing/",
+    "@modules/privacy-policy-webview": "file:./modules/privacy-policy-webview/",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
     "@modules/user-profile": "file:./modules/user-profile/",
     "@react-native-camera-roll/camera-roll": "5.0.2",
@@ -55,7 +56,7 @@
     "react-native-unimodules": "0.13.3",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.10",
-    "react-native-webview": "^11.17.0",
+    "react-native-webview": "11.23.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
   },
