--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@modules/privacy-policy-webview": "file:./modules/privacy-policy-webview/",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
     "@modules/user-profile": "file:./modules/user-profile/",
+    "@modules/zoom-free-calling": "file:./modules/zoom-free-calling/",
     "@react-native-camera-roll/camera-roll": "5.0.2",
     "@react-native-community/cameraroll": "4.1.2",
+    "@react-native-community/checkbox": "0.5.10",
     "@react-native-community/slider": "4.2.2",
+    "@react-native-cookies/cookies": "6.0.11",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "6.5.0",
@@ -38,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.7",
     "react-native-calendars": "1.1282.0",
+    "react-native-date-picker": "4.1.5",
     "react-native-dotenv": "^3.4.8",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.10.0",
@@ -53,10 +57,12 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "3.10.2",
+    "react-native-sha256": "1.4.7",
     "react-native-unimodules": "0.13.3",
-    "react-native-vector-icons": "^9.2.0",
+    "react-native-vector-icons": "8.1.0",
     "react-native-web": "^0.18.10",
-    "react-native-webview": "11.23.0",
+    "react-native-webview": "^11.17.2",
+    "react-native-zoom-us": "6.16.5",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
   },
