add component Terms and Conditions

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/photo-editing": "file:./modules/photo-editing/",
     "@modules/privacy-policy-webview": "file:./modules/privacy-policy-webview/",
+    "@modules/terms-and-conditions": "file:./modules/terms-and-conditions",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
     "@modules/user-profile": "file:./modules/user-profile/",
     "@modules/zoom-free-calling": "file:./modules/zoom-free-calling/",
